<resources>
    <string name="app_name">Alarm Crash</string>
    <string name="title_activity_main">Alarm Crash</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_recorder">Recorder</string>
    <string name="title_activity_sounds">Sounds</string>
    <string name="title">Title</string>
    <string name="message">Message</string>
    <string name="message_edit_hint">Messages...</string>
    <string name="delete">DELETE</string>
    <string name="date_edit">--/--/----</string>
    <string name="date">Date</string>
    <string name="time_edit">--:--</string>
    <string name="time">Time</string>
    <string name="button_cancel_alarm">button cancel alarm</string>
    <string name="logo">logo</string>
    <string name="button_save_alarm">button save alarm</string>
    <string name="button_share_alarm">button share alarm</string>
    <string name="button_edit_alarm">button edit alarm</string>
    <string name="no_alarm_data">No alarm data</string>
</resources>
